--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,6 @@ Thumbs.db
 
 # Site-packages específicos
 venv/lib/python3.12/site-packages/
+
+# Archivos de desarrollo interno
+README-develop.md
